PythonLiteralNFA() method now checks for oct/hex integers