@@ -38,50 +38,50 @@ public class PythonLiteral {
 
     public static void PythonLiteralNFA() {
 
-        // Define the NFA for negative and nonzero integers
-        Set<String> states = new HashSet<>(Arrays.asList("q0", "q1", "q2"));
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '-'));
+         // Define the NFA for negative, nonzero decimal, octal, and hexadecimal integers
+         Set<String> states = new HashSet<>(Arrays.asList("q0", "q1", "q2", "q3"));
+         Set<Character> alphabet = new HashSet<>(Arrays.asList('0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '-', 'a', 'b', 'c', 'd', 'e', 'f', 'A', 'B', 'C', 'D', 'E', 'F', 'x', 'X'));
+ 
+         // Define transitions
+         Map<String, Map<Set<Character>, Set<String>>> transitions = new HashMap<>();
+         transitions.put("q0", Map.of(
+             Set.of('-'), Set.of("q2"),                             // From start state, '-' goes to q2 for negative integers
+             Set.of('1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1"), // Positive numbers start at q1
+             Set.of('0'), Set.of("q1", "q3")                        // 0 can start both octal (q1) or hexadecimal (q3)
+         ));
+         transitions.put("q2", Map.of(
+             Set.of('1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1"), // Negative numbers start at q1 after '-'
+             Set.of('0'), Set.of("q1", "q3")                            // Negative octal/hexadecimal
+         ));
+         transitions.put("q1", Map.of(
+             Set.of('0', '1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1"),   // Loop on decimal numbers
+             Set.of('0', '1', '2', '3', '4', '5', '6', '7'), Set.of("q1")              // Loop on octal digits
+         ));
+         transitions.put("q3", Map.of(
+             Set.of('0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f', 'A', 'B', 'C', 'D', 'E', 'F'),
+             Set.of("q3") // Loop on hexadecimal digits
+         ));
+ 
+         // Define the start state and accept states
+         String startState = "q0";
+         Set<String> acceptStates = new HashSet<>(Arrays.asList("q1", "q3"));
+ 
+         // Create the NFA
+         NFA nfa = new NFA(states, alphabet, transitions, startState, acceptStates);
+ 
+         // Print the NFA and test inputs
+         System.out.println(nfa);
+         System.out.println("Accept '123': " + nfa.accept("123"));       // true (decimal)
+         System.out.println("Accept '-123': " + nfa.accept("-123"));     // true (negative decimal)
+         System.out.println("Accept '074': " + nfa.accept("074"));       // true (octal)
+         System.out.println("Accept '0x3F': " + nfa.accept("0x3F"));     // true (hexadecimal)
+         System.out.println("Accept '0Xf5': " + nfa.accept("0Xf5"));     // true (hexadecimal)
+         System.out.println("Accept '-0x3F': " + nfa.accept("-0x3F"));   // true (negative hexadecimal)
+         System.out.println("Accept '0': " + nfa.accept("0"));           // false (not a valid nonzero integer)
+         System.out.println("Accept '00': " + nfa.accept("00"));         // false (not valid)
+         System.out.println("Accept '0x': " + nfa.accept("0x"));         // false (invalid hexadecimal)
+ 
 
-        // Define transitions
-        Map<String, Map<Set<Character>, Set<String>>> transitions = new HashMap<>();
-        transitions.put("q0", Map.of(
-            Set.of('-'), Set.of("q2"),     // From start state, '-' goes to q2 for negative integers
-            Set.of('1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1") // Positive numbers start at q1
-        ));
-        transitions.put("q2", Map.of(
-            Set.of('1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1") // Negative numbers start at q1 after '-'
-        ));
-        transitions.put("q1", Map.of(
-            Set.of('0', '1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1") // Loop on digits in q1
-        ));
-
-        // Define the start state and accept states
-        String startState = "q0";
-        Set<String> acceptStates = new HashSet<>(Arrays.asList("q1"));
-
-        // Create the NFA
-        NFA nfa = new NFA(states, alphabet, transitions, startState, acceptStates);
-
-        /* 
-        // Print the NFA and test inputs
-        System.out.println(nfa);
-        System.out.println("Accept '123': " + nfa.accept("123"));   // true
-        System.out.println("Accept '-123': " + nfa.accept("-123")); // true
-        System.out.println("Accept '0': " + nfa.accept("0"));       // false
-        System.out.println("Accept '4560': " + nfa.accept("4560")); // true
-        System.out.println("Accept '-4560': " + nfa.accept("-4560"));// true
-        System.out.println("Accept '-0': " + nfa.accept("-0"));     // false
-        System.out.println("Accept '00': " + nfa.accept("00"));     // false
-        */
-
-        /* 
-        // user input method
-        System.out.println("Enter a string to check if it is accepted by the NFA: "); 
-        Scanner scnr = new Scanner(System.in);
-        String userInput = scnr.nextLine();
-        System.out.println("Accepts '" + userInput + "' >> " + nfa.accept(userInput));
-        scnr.close();
-        */
 
         // read from file method
         Scanner scnr = new Scanner(System.in);
